--- a/app.wxss
+++ b/app.wxss
@@ -5,6 +5,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  padding: 200rpx 0;
+  /* padding: 200rpx 0; */
   box-sizing: border-box;
+  background-color: rgba(0, 0, 0, 0.8)
 } 
