--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,21 +1,44 @@
 /**index.wxss**/
-.userinfo {
+.img-unit{
+  width : 100%;
+  height : 100vh;
+  color: #ffffff;
+  white-space: nowrap;
   display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
+::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+  color: transparent;
 }
 
-.userinfo-nickname {
-  color: #aaa;
+.img-cnt{
+    width: 100%;
+    height: 100vh;
+    background: red;
 }
 
-.usermotto {
-  margin-top: 200px;
+.swiper-cnt{
+  width:100%;
+  height:100vh;
+}
+
+.arrow{
+  width:80rpx;
+  height:100rpx;
+}
+
+.up{
+
+position:absolute;
+ 
+right:0;
+
+top:95%;
+
+left:45%;
+ 
+transform:translate(0,-50%);
+
 }
